maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
	
while (!estSurBiscuit) {
	if (estFaceMur) {
		droite()
		if (estFaceMur) {
			gauche()
			if (estFacemur) {
				gauche()
			}
		} else {
			avance()
		}
	} else {
		avance()
	}
}
prendBiscuit()	
}
